subiendo cambios en css, tarjetas alineadas, con fondo, nueva imagen

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@
 .col-11{width: 91.66666666666666%}
 .col-12{width: 100%}
 
-@media screen and (min-width:780px) and (max-width:1024px){
+/*@media screen and (min-width:780px) and (max-width:1024px){
     [class*="col-"]{
         width: 100%;
     }
@@ -61,17 +61,49 @@
         width: 50%;
         
     }
-}
-#contenido-cards{
-    display: flex;
+}*/
+.tarjetas {
+    display: inline-block;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 20%;
+    border: medium;
     text-align: center;
-    padding: 40px;
+    padding: 2em;
+    margin: 1em 2em 2em 1em;
+    background-image: url(imagenes-pokemon/tarjeta-09.png);
+    background-repeat: no-repeat;
+    background-position: top center;
 }
 .encabezado{
     background-image: url(imagenes-pokemon/img-07.png);
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center;
+}
+#num {
+    text-align: left;
+    font-size: 80%;
+    font-weight: bold;
+    color: #6B6C75;
+    
+}
+#nombre {
+    text-align: center;
+    font-size: 200%;
+    font-weight: bold;
+    color: #3A3C49;
+}
+#tipo {
+    text-align: center;
+    font-size: 120%;
+    line-height: 170%;
+
+}
+#debilidad {
+    text-align: left;
+    font-size: 100%;
+    line-height: 170%;
+
 }
