--- a/src/style.css
+++ b/src/style.css
@@ -107,3 +107,46 @@
     line-height: 170%;
 
 }
+#log {
+    width: 100;
+}
+#select-type-pokemon{
+    padding: 10px;
+    margin: 15px 20px;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'DM Sans', sans-serif;
+    background-color: #1b1b1b;
+    border-radius: 10px;
+    white-space: nowrap;
+    border: 5px #1d1d1d;
+    font-weight: bold;
+
+}
+#select-order{
+    padding: 10px;
+    margin: 15px 20px;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'DM Sans', sans-serif;
+    background-color: #1d1d1d;
+    border-radius: 10px;
+    white-space: nowrap;
+    border: 5px #1d1d1d;
+    font-weight: bold;
+
+}
+#boton-home{
+    justify-content: space-between;
+    padding: 10px;
+    margin: 15px 20px;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'DM Sans', sans-serif;
+    background-color: #3A5DA8;
+    border-radius: 10px;
+    white-space: nowrap;
+    border: 5px #3A5DA8;
+    font-weight: bold;
+
+}
