--- a/src/grid.css
+++ b/src/grid.css
@@ -1,11 +1,11 @@
 .contenedor {
     display: grid;
-    grid-gap: 20px;
-    margin: 20px auto;
-    width: 80%;
+    grid-gap: 10px;
+    margin: 10px auto;
+    width: 100%;
     grid-template-columns:repeat(3, 1fr);
     grid-template-rows: repeat(5, auto);
-    grid-template-areas: "header         header     header"
+    grid-template-areas:    "header      header     header"
                             "map         widget     sidebar"
                             "contenido   contenido  sidebar"
                             "source1     source2    source3"
@@ -15,7 +15,23 @@
 .contenedor .header{
     background-color: #FF1C1C;
     grid-area: header;
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
 }
+header nav ul li {
+    display: inline-block;
+    color: #ffff;
+}
+header nav ul li a {
+    display: block;
+    padding: 5%;
+    color: #1d1d1d;
+    font-weight: bold;
+
+
+}
+
 .contenedor .map{
     grid-area: map; 
 }
@@ -115,51 +131,3 @@ body{
     width: 100%;
     height: auto; 
 }
-
-
-/* RESPONSIVE INDEX2.HTML
-.contenedor2 {
-    display: grid;
-    box-sizing: border-box;
-    grid-gap: 20px;
-    margin: 10px auto;
-    width: 80%;
-    /* grid-template-columns:repeat(3, 1fr);
-    grid-template-rows: repeat(5, auto); */
-    /* grid-template-areas: "header2         header2     header2"
-                         "buscadores      buscadores  buscadores"
-                         "main2            main2        main2"
-                         "tarjetas        tarjetas    tarjetas"
-                         "footer2          footer2    footer2"
-
-}
-.contenedor2 .header2{
-    background-color: red;
-    grid-area: header2;
-}
-.contenedor2 .buscador{
-    grid-area: buscador; 
-}
-.contenedor2 .main2{
-    grid-area: main2; 
-}
-.contenedor2 .tarjetas{
-    grid-area: tarjetas;    
-}
-.contenedor2 .footer2{
-    background: black;
-    color: antiquewhite;
-    grid-area: footer2;
-} */ 
-
-
-/* @media screen and (max-width:768px){
-    .contenedor2{
-        grid-template-areas: "header         header     header     header"
-                             "map            map        widget     widget"
-                             "contenido      contenido  contenido contenido"
-                             "sidebar        sidebar    sidebar   sidebar"
-                             "source1        source1    source1   source1 " 
-                             "source2        source2    source3   source3"
-                             "footer         footer     footer    footer"
-    } */
